--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -21,7 +21,7 @@ run:
     - name: NEXTAUTH_SECRET
       value: "+hP31rrZgohD7u3uHr/ASb1WE9j3MYjxHtTBmaaU+3M="
     - name: NEXTAUTH_URL
-      value: "http://localhost:3000"
+      value: "https://d3pvc5dn43.us-east-1.awsapprunner.com"
     - name: GOOGLE_CLIENT_ID
       value: "442433418686-sahpnrfagrs9lfs1pdee2m06e4g2ukdc.apps.googleusercontent.com"
     - name: GOOGLE_CLIENT_SECRET
